# crux-test

./: .gitignore  Cargo.toml
iOS/: project.yml
iOS/SignerApp/: ContentView.swift  SignerAppApp.swift
iOS/SignerApp.xcodeproj/: project.pbxproj
iOS/SignerApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
iOS/SignerApp.xcodeproj/project.xcworkspace/xcuserdata/zz.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/SignerApp.xcodeproj/xcuserdata/zz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/SignerApp.xcodeproj/xcuserdata/zz.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/: Cargo.toml  uniffi.toml
shared-types/: Cargo.toml  build.rs
shared/shared.xcodeproj/: project.pbxproj
shared/shared.xcodeproj/xcshareddata/xcschemes/: uniffi-bindgen-bin.xcscheme
shared/shared.xcodeproj/xcuserdata/zz.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  lib.rs
shared/src/capabilities/: signer.rs
